Fri Nov 26 18:02:44 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: Tk.destroy uses TkWindow#epath

	* ext/tk/lib/tk/image.rb: bug fix

	* ext/tk/lib/tk/wm.rb: add 'iconphoto' method(Windows only)

	* ext/tk/lib/tkextlib/*: some methods uses TkWindow#epath

Fri Nov 26 14:29:39 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_initialize): [ruby-dev:24963]

	* io.c (rb_io_initialize): [ruby-dev:24962]

Fri Nov 26 13:49:06 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_initialize): should retrieve flags from copying file
	  descriptor. [ruby-dev:24961]

	* eval.c (method_missing): raise TypeError for classes do not
	  have allocators.  [ruby-core:03752]

	* lib/erb.rb: [ruby-core:03786]

Fri Nov 26 13:29:02 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::look_for_directives_in): Break
	  out of preprocessing when we find a :section: directive (previously cleared out the
	  comment, but this apparently now generates an error in gsub!)

Fri Nov 26 00:17:40 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_read): move StringValue() check before GetOpenFile().
	  [ruby-dev:24959]

Thu Nov 25 20:14:57 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait#join_nowait): abnormally terminated
	  threads should be also processed.  [ruby-talk:121320]

Thu Nov 25 18:06:37 2004  Tanaka Akira  <akr@m17n.org>

	* configure.in: AC_CHECK_SIZEOF(rlim_t) to include stdio.h to fix
	  problem with autoconf 2.52 or earlier.
	  revert AC_PREREQ to 2.50.
	  [ruby-core:3809]

Thu Nov 25 07:59:41 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: AC_PREREQ(2.53) [ruby-core:03800]

	* io.c (read_all): stringify non-nil buffer argument, and always
	  taint the result.  [ruby-dev:24955]

Wed Nov 24 01:01:31 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_read): integer conversion should be prior to
	  GetOpenFile().  [ruby-dev:24952]
